@@ -55,10 +55,15 @@ public class BeerOrderServiceImpl implements BeerOrderService {
             Page<BeerOrder> beerOrderPage =
                     beerOrderRepository.findAllByCustomer(customerOptional.get(), pageable);
 
+            new BeerOrderPagedList(beerOrderPage
+                    .stream()
+                    .map(beerOrderMapper::beerOrderToDto)
+                    .toList(), beerOrderPage.getPageable(),
+                    beerOrderPage.getTotalElements());
             return new BeerOrderPagedList(beerOrderPage
                     .stream()
                     .map(beerOrderMapper::beerOrderToDto)
-                    .collect(Collectors.toList()), PageRequest.of(
+                    .toList(), PageRequest.of(
                     beerOrderPage.getPageable().getPageNumber(),
                     beerOrderPage.getPageable().getPageSize()),
                     beerOrderPage.getTotalElements());
@@ -100,17 +105,17 @@ public class BeerOrderServiceImpl implements BeerOrderService {
         beerOrderManager.beerOrderPickedUp(orderId);
     }
 
-    private BeerOrder getOrder(UUID customerId, UUID orderId){
+    private BeerOrder getOrder(UUID customerId, UUID orderId) {
         Optional<Customer> customerOptional = customerRepository.findById(customerId);
 
-        if(customerOptional.isPresent()){
+        if (customerOptional.isPresent()) {
             Optional<BeerOrder> beerOrderOptional = beerOrderRepository.findById(orderId);
 
-            if(beerOrderOptional.isPresent()){
+            if (beerOrderOptional.isPresent()) {
                 BeerOrder beerOrder = beerOrderOptional.get();
 
                 // fall to exception if customer id's do not match - order not for customer
-                if(beerOrder.getCustomer().getId().equals(customerId)){
+                if (beerOrder.getCustomer().getId().equals(customerId)) {
                     return beerOrder;
                 }
             }
